added task2 with homeWork2 project